tests/pact/bad/bad-import-unknown-definition.pact
(module f F
  (defcap F () true)
  (defun f () true)
)

(module g G
  (use f [g])
  (defcap G () true)
  (defun g () (f))
)
